Version 4.6.13 - 2019-02-19
* Bug fixes (see mercurial logs for details)

Version 4.6.12 - 2019-01-22
* Bug fixes (see mercurial logs for details)

Version 4.6.11 - 2019-01-05
* Bug fixes (see mercurial logs for details)

Version 4.6.10 - 2018-12-02
* Bug fixes (see mercurial logs for details)

Version 4.6.9 - 2018-11-12
* Bug fixes (see mercurial logs for details)
* Check read access on field in search domain (issue7766)

Version 4.6.8 - 2018-08-20
* Bug fixes (see mercurial logs for details)

Version 4.6.7 - 2018-08-03
* Bug fixes (see mercurial logs for details)

Version 4.6.6 - 2018-07-05
* Bug fixes (see mercurial logs for details)

Version 4.6.5 - 2018-06-11
* Bug fixes (see mercurial logs for details)

Version 4.6.4 - 2018-05-07
* Bug fixes (see mercurial logs for details)

Version 4.6.3 - 2018-03-01
* Bug fixes (see mercurial logs for details)

Version 4.6.2 - 2018-01-04
* Bug fixes (see mercurial logs for details)

Version 4.6.1 - 2017-12-04
* Bug fixes (see mercurial logs for details)

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.6
* Remove support for Python 3.3
* Move handling of sequences to the Database object
* Allow to add tests through entry points
* Add translated descriptor for Reference field
* Implement alter_type and alter_size for sqlite backend
* Add a maximum size for request
* Add support for single record report
* Add support for Flat OpenDocument
* Add get_email in trytond.report
* Replace plain extension by txt
* Support test database cache for remote postgresql
* Increase session randomness to 32 bytes
* Allow to specify datetime related values in XML files
* Add environment variables to wsgi script
* Add unique ids check on RPC
* Assert unique records on ModelView.button and Workflow.transition
* Add test for function field methods
* Add option install module dependencies with trytond-admin
* Add localhost_name and timeout as get_smtp_server uri parameters